[package]
name = "tinyfw"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { version = ">=0.11", features=["async_tokio"] }
aya-log = "0.1"
tinyfw-common = { path = "../tinyfw-common", features=["user"] }
anyhow = "1.0.42"
clap = { version = "3.1", features = ["derive"] }
env_logger = "0.9"
log = "0.4"
tokio = { version = "1.18", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
network-interface = "0.1.4"
containerd-client = "0.2.0"
lru = "0.8.1"

[build-dependencies]
tonic-build = "0.8"

[[bin]]
name = "tinyfw"
path = "src/main.rs"
